--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
+        <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
         />
-        <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>		
+        <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>		
         <style type="text/css">
         html, body, #map {height: 100%; padding: 0; margin: 0;}
         </style>
