--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<meta name="viewport" content="width=device-width, user-scalable=yes">
         <meta charset="utf-8">
-        <link rel="stylesheet" href="leaflet.css"
-        />
+        <link rel="stylesheet" href="leaflet.css"/>
         <script src="leaflet.js"></script>		
         <style type="text/css">
         html, body, #map {height: 100%; padding: 0; margin: 0;}
