--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<meta name="viewport" content="width=device-width, user-scalable=yes">
+	<meta name="viewport" content="width=600, user-scalable=yes">
         <meta charset="utf-8">
         <link rel="stylesheet" href="leaflet.css"/>
         <script src="leaflet.js"></script>		
@@ -17,7 +17,7 @@
 .leaflet-popup-content ul { list-style-type: none; padding: 0; }
 .leaflet-popup-content li { width: 100%; padding: 0px; margin-bottom: 5px;}
 .leaflet-popup-content li button { width: 100%; height: 100%}
-</style>
+</style>ы
         <div id="map"></div>
         <script>          
         var map = L.map('map', {attributionControl: false});
