--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<meta name="viewport" content="width=1200, user-scalable=yes">
+	<meta name="viewport" content="width=1000, user-scalable=yes">
         <meta charset="utf-8">
         <link rel="stylesheet" href="leaflet.css"/>
         <script src="leaflet.js"></script>		
@@ -10,10 +10,20 @@
         </style>
     </head>
     <body>
-	<style>
-	.leaflet-popup-close-button {
-   display: none; 
+	    
+	    
+<style>
+html {
+    -webkit-text-size-adjust : none;
+    text-size-adjust         : none
 }
+	
+@media screen and (max-width : 1000px) {
+    .vulc__nav {
+        font-size:1.5em;
+    }
+}
+.leaflet-popup-close-button { display: none; }
 .leaflet-popup-content ul { list-style-type: none; padding: 0; }
 .leaflet-popup-content li { width: 100%; padding: 0px; margin-bottom: 5px;}
 .leaflet-popup-content li button { width: 100%; height: 100%}
