--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@ closeOnClick: false,
     .setContent('<h2>Вы нашли скрытый вопрос</h2>Сколько будет 2 + 2?<ul><li><button>три</button></li><li><button>четыре или может быть пять, а может и десять</button></li><li><button>пять</button></li><li><button>че?</button></li></ul>')
     .openOn(map);
 
-map.addControl(L.control.locate({
-       locateOptions: {
-               enableHighAccuracy: true
-}}));
-		
+var locator = L.control.locate({
+    position: 'topright',
+    strings: {
+        title: "Show me where I am, yo!"
+    }
+}).addTo(map);
+
+locator.start();
         </script>        
     </body>
 </html>
