--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html {
 </style>
         <div id="map"></div>
 	    
-        <script src="L.Control.Locate.js" ></script>
+        <script src="L.Control.Locate.min.js" ></script>
         <script>          
         var map = L.map('map', {attributionControl: false});
         map.setView([48.776400, 44.736542], 18);
