--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html {
         font-size:1.5em;
     }
 }
-.leaflet-popup-close-button { display: none; }
+.leaflet-popup-close-button, leaflet-control-locate { display: none; }
 .leaflet-popup-content ul { list-style-type: none; padding: 0; }
 .leaflet-popup-content li { width: 100%; padding: 0px; margin-bottom: 5px;}
 .leaflet-popup-content li button { width: 100%; height: 100%}
