--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ var locator = L.control.locate({
                enableHighAccuracy: true
 }}).addTo(map);
 locator.start();
+map.addControl(new L.Control.Fullscreen());
 		
         </script>        
     </body>
