--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@ html {
 	    
         <script src="L.Control.Locate.min.js" ></script>
         <script>          
-        var map = L.map('map', fullscreenControl: {
+        var map = L.map('map', {
+		fullscreenControl: {
         pseudoFullscreen: false
-    });
+    }
+	});
         map.setView([48.776400, 44.736542], 18);
 		
 //        L.control.attribution({prefix:''}).addAttribution('<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>').addTo(map);  
