--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@ html {
         <script src="L.Control.Locate.min.js" ></script>
         <script>          
         var map = L.map('map', {
-		fullscreenControl: {
-        pseudoFullscreen: false
-    }
+		fullscreenControl: true
 	});
         map.setView([48.776400, 44.736542], 18);
 		
