--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html {
         var map = L.map('map', {
 		fullscreenControl: true
 	});
-        map.setView([48.776400, 44.736542], 18);
+       // map.setView([48.776400, 44.736542], 18);
 		
 //        L.control.attribution({prefix:''}).addAttribution('<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>').addTo(map);  
 
